# streamparanumal

./: .gitignore  CMakeLists.txt  cbuild.sh  configure-cmake.sh  make.top.mkl
BS/: CMakeLists.txt
BS/BS0/: CMakeLists.txt  bs0.hpp
BS/BS1/: CMakeLists.txt  bs1.hpp
BS/BS2/: CMakeLists.txt  bs2.hpp
BS/BS3/: CMakeLists.txt  bs3.hpp
BS/BS4/: CMakeLists.txt  bs4.hpp
BS/BS5/: CMakeLists.txt  bs5.hpp
BS/BS5/okl/: bs5.okl  bs5_a.okl
BS/BS5/src/: bs5Setup.cpp
BS/BS6/: CMakeLists.txt  bs6.hpp
BS/BS7/: CMakeLists.txt  bs7.hpp
BS/BS8/: CMakeLists.txt  bs8.hpp
BS/BS8/src/: bs8Run.cpp
libs/: CMakeLists.txt
libs/core/: CMakeLists.txt  platformDeviceConfig.cpp  platformProperties.cpp  platformSettings.cpp
libs/linAlg/: CMakeLists.txt
libs/mesh/: CMakeLists.txt  meshBasisTet3D.cpp
libs/ogs/: CMakeLists.txt
libs/ogs/okl/: ogsKernels.okl
modulefiles/: streamparanumal
